# datn_1

./: README.md  sdkconfig  sdkconfig.old
lib/: adc.c  adc.h  queueService.h  thingsboard.c  thingsboard.h  wifi.c  wifi.h
main/: CMakeLists.txt  main.c
test/: main.c
